--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@ floating point numbers</description>
     <properties>
         <java.version>1.8</java.version>
         <junit.jupiter.version>5.10.2</junit.jupiter.version>
-        <junit.platform.version>1.0.0-M4</junit.platform.version>
         <jmh.version>1.18</jmh.version>
         <jar.name>gibbon</jar.name>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
@@ -41,15 +40,12 @@ floating point numbers</description>
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit.platform.version}</version>
-                    </dependency>
-                </dependencies>
+                <configuration>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
