--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@ floating point numbers</description>
 
 	<dependencies>
         <dependency>
+            <groupId>colt</groupId>
+            <artifactId>colt</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.3.2</version>
